[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "asynchronet"
version = "0.1.0"
description = "Fork of netdev: Asynchronous multi-vendor library for interacting with network devices"
authors = ["Sergey Yakovlev <selfuryon@gmail.com>", "Hunter Johnston <hunter@huntabyte.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://netdev.readthedocs.io"
documentation = "https://netdev.readthedocs.io"
repository = "https://github.com/selfuryon/netdev"
keywords = ['netdev','network', 'netmiko', 'asyncio']
classifiers = [
        "Development Status :: 1 - Beta",
        "Framework :: AsyncIO",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Telecommunications Industry",
        "Topic :: System :: Networking",
        "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.10"
asyncssh = "^2.11.0"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]
asyncssh = "^2.11.0"
flake8 = "^4.0.1"
Sphinx = "^5.1.1"
black = "^22.6.0"
pytest = "^7.1.2"
mkdocs-material = "^8.3.9"
termynal = "^0.2.0"


[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

