[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "asynchronet"
version = "0.1.0"
description = "Asynchronous multi-vendor library for interacting with network devices"
authors = ["Hunter Johnston <hunter@huntabyte.com>", "Sergey Yakovlev <selfuryon@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://asynchronet.huntabyte.com/"
documentation = "https://asynchronet.huntabyte.com"
repository = "https://github.com/huntabyte/asynchronet"
keywords = ['asynchronet', 'async netmiko', 'network', 'netmiko', 'asyncio', 'asyncssh']
classifiers = [
        "Development Status :: 4 - Beta",
        "Framework :: AsyncIO",
        "Programming Language :: Python :: 3.10",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Telecommunications Industry",
        "Topic :: System :: Networking",
        "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.10"
asyncssh = "^2.11.0"

[tool.poetry.dev-dependencies]
asyncssh = "^2.11.0"
flake8 = "^4.0.1"
black = "^22.6.0"
pytest = "^7.1.2"
mkdocs-material = "^8.3.9"
termynal = "^0.2.0"


[tool.poetry.extras]

